# modelo_biblioteca_python

./: .gitignore
gcs2bq/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
gcs2bq/gcs2bq/: .gitignore  __init__.py  bq_dataframe_loader.py  def_get_gcp_service.py  gcs_dataframe_to_parquet_loader.py  gcs_dataframe_to_xlsx_loader.py  gcs_parquet_to_dataframe_reader.py  gcs_xlsx_to_dataframe_reader.py  load_xlsx_to_bigquery_02.py  main.py
nome_biblioteca/: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
nome_biblioteca/docs/: build_twine.html  criar_biblioteca.html  teste_unitario_manual.py  usar_biblioteca.html
nome_biblioteca/nome_da_biblioteca/: __init__.py  main.py
nome_biblioteca/tests/: test_modulo1.py
