[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nome_da_biblioteca"  # Substitua pelo nome real da sua biblioteca
version = "0.1.4"
description = "Biblioteca para concatenar duas colunas de um DataFrame"
authors = [
    { name = "Seu Nome", email = "seu_email@dominio.com" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = ["pandas>=1.0.0"]
keywords = ["dataframe", "concatenate", "pandas"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"

